<resources>
    <string name="app_name">Food finder</string>
    <string name="title_activity_restourants">RESTOURANTS</string>
    <string name="title_activity_main">FOOD FINDER</string>
    <string name="settings">Settings</string>
    <string name="settings_long">Change settings</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="drawer_open">Open drawer</string>
    <string name="drawer_close">Close drawer</string>
    <string name="exit">Exit</string>
    <string name="exit_long">Exit application</string>
    <string name="update_user_first_name">First name</string>
    <string name="update_user_first_name_message">First name here</string>
    <string name="update_user_last_name">Last name</string>
    <string name="update_user_last_name_message">Your last name</string>
    <string name="update_user_address">Address</string>
    <string name="update_user_address_message">Your address</string>
    <string name="update_user_phone_number">Phone number</string>
    <string name="update_user_phone_number_message">Your phone number</string>
    <string name="update_lookup_radius">Lookup radious</string>
    <string name="pref_splash_key">pref_splash</string>
    <string name="pref_splash_summary">Disable splash screen on start</string>
    <string name="pref_splash_title">Disable splash</string>
    <string name="pref_radius_settings">pref_radius_settings</string>
    <string name="pref_radius">pref_radius</string>
    <string name="pref_phone_nubmer">pref_phone_nubmer</string>
    <string name="pref_address">pref_address</string>
    <string name="pref_address_summary">Your address</string>
    <string name="pref_phone_nubmer_summary">Your phone number</string>
    <string name="pref_last_name_summary">Your last name</string>
    <string name="pref_last_name_key">pref_last_name_key</string>
    <string name="pref_first_name_key">pref_first_name_key</string>
    <string name="pref_first_name_summary">Your first name</string>


    <string name="list">LIST</string>
    <string name="map">MAP</string>
    <string name="info">INFO</string>
    <string name="meals">MEALS</string>
    <string name="call">Call:</string>
    <string name="sms">Sms:</string>
    <string name="working_time">Working time:</string>
    <string name="working_time_time">10:00-23:00</string>
    <string name="website">Website:</string>
    <string name="website_url">www.google.com</string>
    <string name="name">Name:</string>
    <string name="test_text_desc">Piletina, Pirinac, Grasak, Bambus, Zacini, jos zacija, jos zacija, jos zacija, jos zacija, jos zacija, jos zacija</string>
    <string name="description_name">Description:</string>
    <string name="action_settings">settings</string>
    <string name="email_url">test@gmail.com</string>
    <string name="email">E-mail:</string>
    <string name="send_to">Send via:</string>
    <string name="filter_text">Filter</string>
    <string name="call_test_text">0622255252</string>
    <string name="share">SHARE</string>
    <string name="test_value">Teest</string>
    <string name="name_test_value">Name</string>
    <string name="price">Price</string>
    <string name="ok">Ok</string>
    <string name="filter_time_text">PICK TIME</string>
    <string name="home">Home</string>
    <string name="home_long">Home screen</string>
    <string name="filter_location">FILTER LOCATION</string>
</resources>
