<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="Personal information"
        android:key="user_settings">
        <EditTextPreference
            android:key="@string/pref_first_name_key"
            android:title="@string/update_user_first_name"
            android:persistent="true"
            android:summary="@string/pref_first_name_summary"
            android:dialogTitle="@string/update_user_first_name"
            android:dialogMessage="@string/update_user_first_name_message" />

        <EditTextPreference
            android:key="@string/pref_last_name_key"
            android:title="@string/update_user_last_name"
            android:persistent="true"
            android:summary="@string/pref_last_name_summary"
            android:dialogTitle="@string/update_user_last_name"
            android:dialogMessage="@string/update_user_last_name_message"
            />
        <EditTextPreference
            android:key="@string/pref_address"
            android:title="@string/update_user_address"
            android:persistent="true"
            android:summary="@string/pref_address_summary"
            android:dialogTitle="@string/update_user_address"
            android:dialogMessage="@string/update_user_address_message" />
        <EditTextPreference
            android:key="@string/pref_phone_nubmer"
            android:title="@string/update_user_phone_number"
            android:persistent="true"
            android:summary="@string/pref_phone_nubmer_summary"
            android:dialogTitle="@string/update_user_phone_number"
            android:dialogMessage="@string/update_user_phone_number_message"
            android:inputType="number"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:title="Places radius"
        android:key="@string/pref_radius_settings">
        <ListPreference
            android:dialogTitle="@string/update_lookup_radius"
            android:entries="@array/pref_radiusConnectionTypes_entries"
            android:entryValues="@array/pref_radiusConnectionTypes_values"
            android:key="@string/pref_radius"
            android:title="@string/update_lookup_radius"
            android:summary="%s"
            android:defaultValue="1"
            />
    </PreferenceCategory>
    <PreferenceCategory
        android:title="Splash screen"
        android:key="splash_settings">
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="@string/pref_splash_key"
            android:summary="@string/pref_splash_summary"
            android:title="@string/pref_splash_title" />
    </PreferenceCategory>
</PreferenceScreen>